Funny how JavaFX uses the stack-trace.
Couldn't there have been a better way? Like making the method `protected` and `static`...?